--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "/dist/logger.js",
   "scripts": {
     "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,6 +39,11 @@
   },
   "homepage": "https://github.com/darlantc/simplyas-js-logger#readme",
   "devDependencies": {
+    "prettier": "^2.1.2",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.5"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
