--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json",
+    "test-watch": "jest --config jestconfig.json --watch"
   },
   "repository": {
     "type": "git",
@@ -39,7 +40,10 @@
   },
   "homepage": "https://github.com/darlantc/simplyas-js-logger#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.2",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.3",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   },
